Revision history for {{$dist->name}}

{{$NEXT}}

2.07      2013-07-14 08:33:32 America/New_York
          - typo fix in documentation; thanks to Francesco Cecconi and Debian

2.06      2013-07-03 13:21:34 America/New_York
          - Repackage, update to pass with different escaping
2.05

          - blockparas uses <p> as its inner tag, instead of <div>
          - blockparas and blockcode are consolidated when they are found in
            groups.  blocklines are left out because they're so literal.

2.04

          - Fixed bug when run under 5.8.1 and always-random hashes.
          - Emacs macros enhanced.

2.03

          - Working toward standards compliance.
            - blockcode now uses pre tags.
            - blockparas and blockquotes use div tags.
          - Remove dependency on Regexp::Common.
          - XHTML 1.1 valid output.
          - CSS Class names for every option type.
          - Fixed a but in tables where duplicate breakpoints were being
            entered (reported by Dan Wright).
          - Fixed but in tables where breakpoints of two spaces were ignored.
          - text2html command line utility ensures output ends in newline.
          - Add example emacs macros for modifying regions with text2html.

2.02

          - Added command line utility called 'text2html'.  It will be
            installed when this version of HTML::FromText is built and
            installed.
          - Fixed but in blockcode, wasn't preserving spaces.

2.01

          - Fixed URLS, they were broken because Regexp::Common::URI was much
            too restrictive (reported by Wim Kerkhoff).
          - Fixed bullets. Mixing '*' and '-' were previously allowed and
            caused problems. They can't be mixed within paragraphs that are
            bulleted lists any longer (reported by Wim Kerkhoff).
          - Fixed bold and underline, they were broken and matching, but not