@@ -1,0 +1,27 @@
+# This file is generated by Dist::Zilla::Plugin::CPANFile v6.024
+# Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
+
+requires "Carp" => "0";
+requires "Email::Find::addrspec" => "0.09";
+requires "Exporter" => "5.58";
+requires "HTML::Entities" => "1.26";
+requires "Scalar::Util" => "1.12";
+requires "Text::Tabs" => "98.1128";
+
+on 'build' => sub {
+  requires "Module::Build" => "0.28";
+};
+
+on 'test' => sub {
+  requires "File::Find" => "0";
+  requires "File::Spec" => "0";
+  requires "File::Temp" => "0";
+  requires "IO::Handle" => "0";
+  requires "IPC::Open3" => "0";
+  requires "Test::More" => "0";
+  requires "perl" => "5.006";
+};
+
+on 'configure' => sub {
+  requires "Module::Build" => "0.28";
+};
