@@ -7,4 +7,4 @@ license = Perl_5
 copyright_holder = Casey West
 copyright_year   = 2003 - 2022
 
-[@RJBS]
+[@Author::DOMM]
